<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小家相册</string>
    <string name="nopic">暂无图片</string>
    <string name="connect">连接</string>
    <string name="exit">退出</string>
    <string name="btn_connect">连接Wi-Fi</string>
    <string name="passtip">请输入您的Wi-Fi密码</string>
    <string name="phonetip">请输入您需要绑定相框的手机号码</string>
    <string name="nopictip">现在还没有照片哦～\n快提醒他们们发照片过来吧～</string>
    <string name="sendtip">输入手机号码可以发送短信给绑定相框的手机，\n您也可以选择不发送</string>
    <string name="confirm">确认</string>
    <string name="action_settings">Settings</string>

</resources>
