<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_transparent"
    tools:context="com.hmammon.familyphoto.ui.WifiFragment">

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:background="@drawable/selector_wifi_cir"
        />

    <LinearLayout
        android:id="@+id/ll_detail"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:visibility="visible"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btn_connect"
            android:textSize="25sp"
            android:textColor="@color/orange"
            android:id="@+id/textView" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/orange"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"></FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="请选择一个网络连接"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/tv_wifi" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp">


            <EditText
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:hint="@string/passtip"
                android:background="@drawable/bg_et"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                android:id="@+id/et" />

            <Button
                android:layout_width="70dp"
                android:layout_height="48dp"
                android:text="@string/connect"
                android:background="@drawable/selector_btn"
                android:textColor="@color/white"
                android:id="@+id/btn_conn" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lv"
            android:divider="@color/white"
            android:dividerHeight="1dp"
            android:padding="5dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/btn_exit"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_margin="5dp"
        android:background="@drawable/selector_btn"
        android:textColor="@color/white"
        android:layout_gravity="left|top" />


</FrameLayout>
